  09 Jul 2017; Manuel Friedli <manuel@fritteli.ch> -gitlab-shell-4.1.1.ebuild,
  -gitlab-shell-5.0.3.ebuild:
  dev-vcs/gitlab-shell:  Purge obsolete versions

  08 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/0001-gitlab-shell-4.1.1-config-paths.patch,
  +files/0002-gitlab-shell-5.1.1-Makefile.patch, gitlab-shell-5.1.1.ebuild:
  dev-vcs/gitlab-shell:  Fix ebuild for gitlab-shell-5.1.1; it requires some
  more love than the previous versions.

*gitlab-shell-5.1.1 (08 Jul 2017)

  08 Jul 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-5.1.1.ebuild:
  dev-vcs/gitlab-shell:  Add ebuild for gitlab-shell-5.1.1; dependency of
  gitlab-ce-9.3.5

*gitlab-shell-5.0.5 (17 Jun 2017)

  17 Jun 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-5.0.5.ebuild:
  dev-vcs/gitlab-shell:  Add version 5.0.5

*gitlab-shell-5.0.0 (13 Mar 2017)

  13 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-5.0.0.ebuild:
  dev-vcs/gitlab-shell:   added ebuild for gitlab-shell-5.0.0; support for git-
  annex has been removed.

  14 Feb 2017; Manuel Friedli <manuel@fritteli.ch>
  -files/gitlab-shell-3.2.0-config-paths.patch, -gitlab-shell-4.0.3.ebuild:
  dev-vcs/gitlab-shell: deleted old ebuild

*gitlab-shell-4.0.3 (12 Dec 2016)

  12 Dec 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-4.0.3.ebuild:
  dev-vcs/gitlab-shell:  added ebuild for gitlab-shell-4.0.3, a dependency of
  gitlab-ce-8.14.4

  23 Nov 2016; Manuel Friedli <manuel@fritteli.ch> -gitlab-shell-3.5.0.ebuild,
  -gitlab-shell-3.6.1.ebuild:
  dev-vcs/gitlab-shell:  pruned old ebuilds

*gitlab-shell-4.0.0 (11 Nov 2016)

  11 Nov 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-4.0.0.ebuild:
  dev-vcs/gitlab-shell:  added ebuilds for gitlab-shell-4.0.0, a dependency of
  gitlab-ce-8.14

  22 Oct 2016; Manuel Friedli <manuel@fritteli.ch> -gitlab-shell-3.4.0.ebuild,
  -gitlab-shell-3.6.0.ebuild:
  dev-vcs/gitlab-shell:  purged unneeded ebuilds

*gitlab-shell-3.6.6 (22 Oct 2016)
